# IPK_2023SS

./: .gitignore  README.md
Projekt/: CMakeLists.txt
Projekt/frequencies_letters/: freq_functions.cpp  freq_functions.h  loesung_2.cpp
Projekt/frequencies_words/: loesung_3.cpp  wfreq_functions.cc  wfreq_functions.hh
Projekt/histogramme/: histogram.cpp  histogram.h  loesung_1.cpp
project/Aufgabe1/: histogram.cc  histogram.hh  main.cc
sheet01/: README.md  helloworld.cc
sheet02/Aufgabe1/: Aufgabe1a.cpp  Aufgabe1b.cpp
sheet02/Aufgabe2/: Mitternachtsformel.cpp
sheet02/Aufgabe3/: collatz.cpp
sheet03/Aufgabe1/: CMakeLists.txt  potenzen.cpp
sheet03/Aufgabe2/: CMakeLists.txt  wurzel.cpp
sheet03/Aufgabe3/: README.md  fibonacci.cc  iter_fibonacci.cc  iter_fibonacci_64.cc  rec_fibonacci.cc  time_script.sh  value_script.sh
sheet04/Aufgabe1/: CMakeLists.txt  vector.cpp
sheet04/Aufgabe2/: README.md  convex-hull-plot.py  hull.txt  konvex.cc  points.txt
sheet05/Aufgabe1/: CMakeLists.txt  README.md  normal.cc  readvector.cc  statistics.cc  statistics.h  test_mean.cc  test_median.cc  time_script.sh  uniform.cc
sheet05/tutorium/: class.cc  class.hh  main.cc
sheet06/Pixelgraphiken/: CMakeLists.txt  canvas.cc  canvas.hh  plot.cc  point.cc
sheet06/Polygon/: main.cc  point.hh  polygon.cc  polygon.hh
sheet07/Aufgabe1/: CMakeLists.txt  point.hh  test_1D.cc  test_3D  test_3D.cc
sheet07/Aufgabe2/: template.cc
sheet07/Aufgabe3/: statistics.h  statistics.hh  statisticsdriver.cc
sheet08/Aufgabe1/: CMakeLists.txt  test.cpp  zahlen_einlesen.cpp
sheet08/Aufgabe2/: main.cc
sheet09/: a_main.cc  b_main.cc  d_frequencies.hh  d_main.cc  filter.hh  frequencies.hh  letterfrequencies.hh  plugins.hh
sheet09/include/: frequencysource.hh
tutorium/: operator_overloading.cpp
tutorium/classes/: class.cc  class_konstructor.cc
tutorium/overloading/: function_overloading.cpp
tutorium/pointer_and_RAII/: pointer.cc  raii.cc
tutorium/sheet09_tut/: filter.hh  letterfrequencies.hh  main.cc  plugins.hh
